ajout figure points

--- a/rapport/DeepLearning.tex
+++ b/rapport/DeepLearning.tex
@@ -144,7 +144,12 @@ capacité de généralisation : faculté d'un système à produire des résultat
 rétropopagation : depuis les années 80
 gardient : incrément ou décrément calculable de l'erreur correspondant à la modification des poids $\theta$ lors de la phase d'entraînement
 
-
+\begin{figure}[H]
+    \centering
+    \makebox[\textwidth]{\includesvg[width=.4\paperwidth]{c1p2s1_points}}
+    \caption{Grrr}
+    \label{fig:c1p2s1}
+\end{figure}
 
 \gls{carvec}
 \gls{training}
